feat: add ZZProfile_Category

--- a/ZZKit/Podfile
+++ b/ZZKit/Podfile
@@ -16,6 +16,8 @@ target 'ZZKit' do
   # local pods
   pod 'ZZDiscover_Category', :path => '../ZZDiscover_Category'
   pod 'ZZDiscover', :path => '../ZZDiscover'
+  pod 'ZZProfile_Category', :path => '../ZZProfile_Category'
+  
 
 # https://blog.codemagic.io/code-signing-issues-in-xcode-14-and-how-to-fix-them/
 post_install do |installer|
